--- a/WSS28model/RpathQNM_WSS28.Rmd
+++ b/WSS28model/RpathQNM_WSS28.Rmd
@@ -1124,3 +1124,181 @@ for(j in seq_along(q.models)){
 # par(opar)
 
 ```
+
+
+## gather results
+```{r}
+
+WSS28.results_ecos<-WSS28.results %>% 
+    mutate(
+        Direction=case_match(Direction,"Plus" ~ "plus", "Minus" ~ "minus")
+        ) %>%
+    select(!Outside)%>%
+    add_column (Model="ecosense", model_links=0) %>%
+    unite("model_ID", Group:Direction, remove=FALSE)
+                    
+
+WSS28_results_ecosQNM<-bind_rows(WSS28_QNM_results_compiled_tr, WSS28.results_ecos)
+
+saveRDS(WSS28_results_ecosQNM, "~/JCT work/WGNARS/RpathtoQNM/RpathQNM/data/WSS28_results_ecosQNM.RDS")
+
+```
+## Graphing ecosense and qnm
+```{r}
+library(reshape2)
+library(ggplot2)
+library(gridExtra)
+
+WSS28_results_ecosQNM <- readRDS("~/JCT work/WGNARS/RpathtoQNM/RpathQNM/data/WSS28_results_ecosQNM.RDS")
+
+
+ecoQNMresults<-WSS28_results_ecosQNM %>%
+                unite("scenario", Group:Direction, remove=FALSE )
+
+ecoQNMresults_long<-ecoQNMresults %>%
+                    pivot_longer (cols= 7:34, names_to="node" ) %>%
+                   mutate(sign=value) %>%
+                    mutate(fill=value) 
+                    
+ecoQNMresults_long$sign[ecoQNMresults_long$sign >600] <- "positive"
+ecoQNMresults_long$sign[ecoQNMresults_long$sign >400 & ecoQNMresults_long$fill <=600] <- "zero" 
+ecoQNMresults_long$sign[ecoQNMresults_long$sign <=400] <- "negative"
+
+ecoQNMresults_long$fill[ecoQNMresults_long$fill >800] <- "strong_positive"
+ecoQNMresults_long$fill[ecoQNMresults_long$fill >600 & ecoQNMresults_long$fill <=800] <- "moderate_positive"
+ecoQNMresults_long$fill[ecoQNMresults_long$fill >400 & ecoQNMresults_long$fill <=600] <- "weak"
+ecoQNMresults_long$fill[ecoQNMresults_long$fill >200 & ecoQNMresults_long$fill <=400] <- "moderate_negative"
+ecoQNMresults_long$fill[ecoQNMresults_long$fill <=200] <- "strong_negative"
+
+
+  
+  ########################
+# Plot up responses as bubble plots 
+dat_fishplus<- ecoQNMresults_long %>% 
+                filter(scenario=="Fishery_plus")
+    
+
+p_fishplus<- ggplot(dat_fishplus)+
+  geom_point(aes(y=node, x=model_ID,cex=value, 
+                 pch=sign, color=sign)) + 
+    # pch=sign, color=sign, fill=fill)) + 
+  # scale_color_manual( values=c("lightblue","orangered","grey"))+
+  # scale_shape_manual(values=c(25,24,22)) + 
+  # scale_fill_manual(values=c("lightblue","orangered","white")) + 
+
+  theme_bw() +
+  theme(axis.line = element_line(colour = "black"),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.background = element_blank(),
+     
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank(),
+        axis.text.x=element_text (angle=-90, hjust=0 ))
+        # legend.position = "none"
+  #       strip.background = element_blank()) +
+  # scale_y_discrete(labels=c( "BKCA" = "BKC-A", 
+  #                            "RKCA" = "RKC-A",
+  #                            "PC" = "Pacific cod",
+  #                            "HalA" = "Halibut-A"))
+
+
+dat_fishminus<- ecoQNMresults_long %>% 
+                filter(scenario=="Fishery_minus")
+
+p_fishminus<- ggplot(dat_fishminus)+
+  geom_point(aes(y=node, x=model_ID,cex=value, 
+                 pch=sign, color=sign)) + 
+    # pch=sign, color=sign, fill=fill)) + 
+  # scale_color_manual( values=c("lightblue","orangered","grey"))+
+  # scale_shape_manual(values=c(25,24,22)) + 
+  # scale_fill_manual(values=c("lightblue","orangered","white")) + 
+
+  theme_bw() +
+  theme(axis.line = element_line(colour = "black"),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.background = element_blank(),
+     
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank(),
+        axis.text.x=element_text (angle=-90, hjust=0 ))
+
+
+
+dat_gb<-subset(dat_long, system=="GB")
+dat_gb$node<-factor(dat_gb$node, levels=c( "Seafood","HabitatSeafloorDemersal","Forage Fish", "Groundfish"))
+
+p2<- ggplot(dat_gb)+
+  geom_point(aes(y=node, x=model,cex=response, 
+                 pch=sign, color=sign, fill=fill)) + 
+  scale_color_manual( values=c("lightblue","orangered","grey"))+
+  scale_shape_manual(values=c(25,24,22)) + 
+  scale_fill_manual(values=c("lightblue","orangered","white")) + 
+  facet_grid(~scen) + 
+  theme_bw() +
+  theme(axis.line = element_line(colour = "black"),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.background = element_blank(),
+        axis.text.x = element_blank(),
+        axis.title.x=element_blank(),
+        axis.title.y=element_blank(),
+        legend.position = "none" ,
+        strip.background = element_blank(),
+        strip.text.x = element_blank()) +
+    scale_y_discrete(labels=c( "Forage Fish" = "Forage fish",
+                              "HabitatSeafloorDemersal" = "HSD"))
+
+
+
+dat_bar<-subset(dat_long, system=="BAR")
+dat_bar$node<-factor(dat_bar$node, levels=c( "Wetlands","Recreation","Habitable Land", "Fish"))
+
+
+p3<- ggplot(dat_bar)+
+  geom_point(aes(y=node, x=model,cex=response, 
+                 pch=sign, color=sign, fill=fill)) + 
+  scale_color_manual( values=c("lightblue","orangered","grey"))+
+  scale_shape_manual(values=c(25,24,22)) + 
+  scale_fill_manual(values=c("lightblue","orangered","white")) + 
+  facet_grid(~scen) + 
+  theme_bw() +
+  theme(axis.line = element_line(colour = "black"),
+        panel.grid.major = element_blank(),
+        panel.grid.minor = element_blank(),
+        panel.background = element_blank(),
+        axis.title.y=element_blank(),
+        legend.position = "none",
+        strip.background = element_blank(),
+        strip.text.x = element_blank()) + 
+  scale_x_discrete(labels=c("catqnm" = "QNM", "catbbn" = "BBN",
+                            "catfcm" = "FCM")) + 
+  scale_y_discrete(labels=c( "Habitable Land" = "HL"))
+
+
+grid.arrange(p1, p2, p3, ncol=1)
+
+library(gtable)
+library(grid)
+
+g1 <- ggplotGrob(p1)
+g2 <- ggplotGrob(p2)
+g3 <- ggplotGrob(p3)
+g <- rbind(g1,g2, g3, size = "first")
+
+g$widths <- unit.pmax(g1$widths, g2$widths, g3$widths)
+grid.newpage()
+grid.draw(g)
+
+#ggsave(filename="core_nodes_REV.pdf", width = 15, height = 15, units = "cm", dpi=300)
+#ggsave not working for some reason 
+grid.newpage()
+
+pdf("core_nodes_REV.pdf", width = 4, height = 5)
+grid.draw(g)
+dev.off()
+
+
+```
+
